--- a/index.html
+++ b/index.html
@@ -355,61 +355,60 @@ display: none;
 
 <div id="introduction" class="section level3">
 <h3>Introduction</h3>
-<p>The United States has the highest prison rate in the world, and
-people of colour, especially Black Americans, are affected more than
-white people. Using data from the Vera Institute, I will look at the
-trends in incarceration in the U.S. in this study. The factors I will be
-looking at are the total number of people in prison , the rate of
-incarceration per 100,000 people, and the breakdowns by race and gender.
-These factors are very important for figuring out how big and what kind
-of differences there are in imprisonment.</p>
+<p>The United States has the highest prison rate in the world, with
+significant variation across states. This study uses data from the Vera
+Institute to examine incarceration trends at the state level in the U.S.
+I will focus on the total number of people in prison and the rate of
+incarceration per 100,000 people. By analyzing these factors, we can
+better understand the differences in imprisonment across states and
+identify areas in need of targeted policies and reforms.</p>
 </div>
 <div id="summary-information" class="section level3">
 <h3>Summary Information</h3>
-<p>In the latest year of the dataset, the total prison population across
-the United States was found to be 327,167,434. On average, each county
-had a prison population of approximately 104226.6 individuals. The state
-with the highest prison population was California, which reported a
-total of 66,000 incarcerated individuals. Over the past ten years, the
-total prison population in the U.S. has decreased by 23079618 in the
-last ten years. Notably, Black individuals make up a significant portion
-of the incarcerated population, with 8.813401% of the Black population
-aged 15 to 64 being incarcerated. This stark disparity highlights the
-racial inequalities present within the U.S. incarceration system,
-emphasizing the need for targeted policies and reforms to address these
-systemic issues.</p>
+<p>In the most recent year covered by the dataset, the total prison
+population across the United States was 327,167,434. On average, each
+county had a prison population of approximately 104,226.6 individuals.
+California stood out as the state with the highest prison population,
+reporting a total of 66,000 incarcerated individuals. Over the past
+decade, the total prison population in the U.S. has decreased by
+23,079,618, indicating a significant trend towards reduction. By
+researching these trends in incarceration, I aim to provide insights
+into the dynamics of the U.S. prison system, which can help inform
+policymakers and advocates in developing strategies to reduce
+incarceration rates and address the systemic issues within the criminal
+justice system.</p>
 </div>
 <div id="the-dataset" class="section level3">
 <h3>The Dataset</h3>
-<p>Who collected the data?<br />
-The data was collected by Vera institute, n independent nonprofit
+<p>Who collected the data?</p>
+<p>The data was collected by Vera institute, n independent nonprofit
 national research and policy organization in the United States, and a
 leader in criminal justice research.</p>
-<p>How was the data collected or generated?<br />
-The dataset was collected from various sources including governmental
+<p>How was the data collected or generated?</p>
+<p>The dataset was collected from various sources including governmental
 agencies, correctional facilities, and public records. In most cases,
 the information is gathered by asking for public records, polls, and
 direct reports from prisons.</p>
-<p>Why was the data collected? The data was collected to show US
-imprisonment trends. Policymakers, scholars, advocates, and the public
-should know the prison population’s size and diversity, including
-ethnicity and gender. The knowledge helps individuals understand and
-address prison overcrowding, black injustice, and the criminal justice
-system’s impact on various populations.</p>
+<p>Why was the data collected?</p>
+<p>The data was collected to show US imprisonment trends. Policymakers,
+scholars, advocates, and the public should know the prison population’s
+size and diversity, including ethnicity and gender. The knowledge helps
+individuals understand and address prison overcrowding, black injustice,
+and the criminal justice system’s impact on various populations.</p>
 <p>How many observations (rows) are in your data?</p>
 <p>There are 153811 rows in my data.</p>
 <p>How many features (columns) are in the data?</p>
 <p>There are 36 features in my data.</p>
 <p>What, if any, ethical questions or questions of power do you need to
-consider when working with this data? Working with this data raises
-social difficulties. Protection of the dataset’s subjects is the first
-priority. Keeping identities anonymous when collecting data is crucial.
-Prison data collection and usage include power balance. This data should
-be used by researchers and policymakers to create fair and reasonable
-policies, not ones that reinforce biases and wrongs. The data highlights
-structural issues like racial disparity and mass incarceration, which
-must be addressed respectfully to avoid shameing afflicted
-communities.</p>
+consider when working with this data?</p>
+<p>Working with this data raises social difficulties. Protection of the
+dataset’s subjects is the first priority. Keeping identities anonymous
+when collecting data is crucial. Prison data collection and usage
+include power balance. This data should be used by researchers and
+policymakers to create fair and reasonable policies, not ones that
+reinforce biases and wrongs. The data highlights structural issues like
+racial disparity and mass incarceration, which must be addressed
+respectfully to avoid shameing afflicted communities.</p>
 <p>What are possible limitations or problems with this data? (at least
 200 words)</p>
 <p>There’s a chance that the data is inaccurate in several distinct
